# markdown-pedagogico

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Estructura-Tauri.md  Implementation Plan  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: quality-gates.yml
.playwright-cli/: page-2026-03-01T02-39-58-183Z.yml  page-2026-03-01T02-41-05-676Z.yml  page-2026-03-01T02-41-15-113Z.yml  page-2026-03-01T02-41-17-154Z.yml  page-2026-03-01T02-41-31-774Z.yml  page-2026-03-01T02-41-33-818Z.yml  page-2026-03-01T02-41-53-961Z.yml  page-2026-03-01T02-42-10-207Z.yml
scripts/: check-node-version.mjs  playwright_smoke.sh  playwright_training_smoke.mjs  review_pdf.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src/components/Editor/: DiagnosticsPanel.tsx  Editor.tsx  EditorWorkspace.tsx  LegacyTextareaEditor.tsx  MarkdownCodeMirror.tsx  PedagogicalOverlay.tsx  ReferencePanel.tsx  StatusBar.tsx  Toolbar.tsx  TooltipContextual.tsx  TrainingCoach.tsx  editorHandle.ts
src/hooks/: useExportPdf.ts  useFileOperations.ts  useKeyboardShortcuts.ts  useTooltipState.ts
src/hooks/__tests__/: useFileOperations.test.ts
src/test/: axe.ts
src/utils/: codeBlockUi.ts  externalLinks.ts  katexInlineStyles.ts  markdownDiagnostics.ts  markdownParser.ts  mermaidRenderer.ts  pedagogicalRules.ts  runtime.ts  trainingMode.ts
(+12 files in other folders)
